--- a/gb/19/8/15/n11454958.md
+++ b/gb/19/8/15/n11454958.md
@@ -1,52 +1,60 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/liczai2340/fq/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/liczai2340/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>Ç¿»¯ÐÄÀíÎÀÉú·þÎñ ÄÏÍ¶×ÔÉ±·ÀÖÎ»ñ¼¨ÓÅ½±</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/08/7476c3a7bd893fd5fa0ee309f57705ab-600x400.jpg" />
-<h6>107Äê¶È×ÔÉ±·ÀÖÎ³ÉÐ§¼°ÐÄÀí¡¢¿ÚÇ»½¡¿µÒµÎñ¿¼ÆÀ£¬ÄÏÍ¶ÏØ±íÏÖÓÅÒì£¬½ÓÊÜÎÀ¸£²¿³¤³ÂÊ±ÖÐ£¨ÖÐ£©°ä½±ºó£¬ÏØ¸®ÎÀÉú¾Ö³¤»ÆÕÑÀÉ£¨ÓÒÒ»£©ÓëÆäËûÊÜ½±ÏØÊÐºÏÓ°¡££¨ÄÏÍ¶ÏØÕþ¸®Ìá¹©£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eyk232/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/eyk232/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/eyk232/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/eyk232/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/eyk232/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/eyk232/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/eyk232/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/eyk232/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/10.jpg" title="è´­ç‰©"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/eyk232/www/master/t/djy/12.jpg" title="ææ¬¾"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/eyk232/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/eyk232/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/eyk232/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/eyk232/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>å¼ºåŒ–å¿ƒç†å«ç”ŸæœåŠ¡ å—æŠ•è‡ªæ€é˜²æ²»èŽ·ç»©ä¼˜å¥–</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/7476c3a7bd893fd5fa0ee309f57705ab-600x400.jpg" />
+<h6>107å¹´åº¦è‡ªæ€é˜²æ²»æˆæ•ˆåŠå¿ƒç†ã€å£è…”å¥åº·ä¸šåŠ¡è€ƒè¯„ï¼Œå—æŠ•åŽ¿è¡¨çŽ°ä¼˜å¼‚ï¼ŒæŽ¥å—å«ç¦éƒ¨é•¿é™ˆæ—¶ä¸­ï¼ˆä¸­ï¼‰é¢å¥–åŽï¼ŒåŽ¿åºœå«ç”Ÿå±€é•¿é»„æ˜­éƒŽï¼ˆå³ä¸€ï¼‰ä¸Žå…¶ä»–å—å¥–åŽ¿å¸‚åˆå½±ã€‚ï¼ˆå—æŠ•åŽ¿æ”¿åºœæä¾›ï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê08ÔÂ15ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÁÖÃÈå¹Ì¨ÍåÄÏÍ¶±¨µ¼£©107Äê¶È<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E8%87%AA%E6%9D%80%E9%98%B2%E6%B2%BB.md">×ÔÉ±·ÀÖÎ</a>³ÉÐ§¼°ÐÄÀí¡¢¿ÚÇ»½¡¿µÒµÎñ¿¼ÆÀ£¬ÄÏÍ¶ÏØ±íÏÖÓÅÒì£¬·Ö±ð»ñµÃ¼¨ÓÅ½±ºÍÓÅµÈ½±£¬ÔÚÈ«¹úÎÀÉçÕþÊ×³¤ÁªÏµ»áÒéÖÐ£¬ÓÉÎÀÉú¸£Àû²¿³¤³ÂÊ±ÖÐÇ××Ô°ä·¢ÓÅµÈÏØÊÐ½±×ù¡£</p>
-<p>Ëæ×ÅÉç»áÓëÉú»îÐÍÌ¬µÄ¿ìËÙ×ª±ä£¬ÃñÖÚÃæ¶Ô¸÷ÖÖÑ¹Á¦£¬½ø¶øµ¼ÖÂ¸÷ÖÖ¾«ÉñÕÏ°­ÖðÄêÅÊÉý£¬ÇáÕßÔì³É½¹ÂÇ¡¢¶ÌÆÚÉç»áÊÊÓ¦ÕÏ°­£¬ÖØÕßÔò²úÉúÓÇÓô£¬ÉõÖÁÒý·¢×ÔÉ±ÐÐÎª¡£</p>
-<figure id="attachment_11454960" style="width: 600px" class="wp-caption alignnone"><a href="http://i.epochtimes.com/assets/uploads/2019/08/8ed25423885b1930bb722d71bbb081ab.jpg"><img class="wp-image-11454960 size-large" src="http://i.epochtimes.com/assets/uploads/2019/08/8ed25423885b1930bb722d71bbb081ab-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">107Äê¶È<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E8%87%AA%E6%9D%80%E9%98%B2%E6%B2%BB.md">×ÔÉ±·ÀÖÎ</a>³ÉÐ§¼°ÐÄÀí¡¢¿ÚÇ»½¡¿µÒµÎñ¿¼ÆÀ£¬ÄÏÍ¶ÏØ±íÏÖÓÅÒì£¬ÎÀÉú¾Ö³¤»ÆÕÑÀÉ£¨ÓÒ£©½ÓÊÜÎÀÉú¸£Àû²¿³¤³ÂÊ±ÖÐ£¨×ó£©°ä·¢ÓÅµÈÏØÊÐ½±×ù¡££¨ÄÏÍ¶ÏØÕþ¸®Ìá¹©£©</figcaption></figure>
-<p>ÄÏÍ¶ÏØÕþ¸®ÎªÇ¿»¯ÃñÖÚ<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%BF%83%E7%90%86%E5%8D%AB%E7%94%9F.md">ÐÄÀíÎÀÉú</a>·þÎñ£¬ÓÚ13ÏçÕòÊÐÎÀÉúËùÉèÖÃÐÄÀí<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%92%A8%E5%95%86.md">×ÉÉÌ</a>·þÎñÕ¾£¬Ìá¹©ÃñÖÚ¿É½üÐÔ¡¢ÉçÇøÐÔ·þÎñ£¬Ï£ÍûÍ¸¹ýÐÄÀí×ÉÉÌ·þÎñ£¬Åã°éÏÝÈëµÍ³±ÃñÖÚ¶È¹ýÈËÉú¹Ø¿¨£¬Ìá¹©ÃñÖÚÐÄÀíÖ§³Ö¡¢×ÉÑ¯·þÎñ´°¿Ú¼°·þÎñ¾Ýµã¡£</p>
-<p>ÁíÍâ£¬ÏØÄÚÉçÇø<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%BF%83%E7%90%86%E5%8D%AB%E7%94%9F.md">ÐÄÀíÎÀÉú</a>ÖÐÐÄÌá¹©×ÔÉ±¸ßÎ£ÏÕÈº¸ö°¸¹Ø»³·ÃÊÓ£¬½Ó»ñ×ÔÉ±¸ßÎ£ÏÕÈº¸ö°¸Í¨±¨£¬¼´ÅÉÔ±Ìá¹©¹Ø»³£¬ÊÓ¸ö°¸×´¿öÐ­Öú×ª½éÏà¹Ø×ÊÔ´£¬°üº¬ÐÄÀí<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%92%A8%E5%95%86.md">×ÉÉÌ</a>¡¢¾ÍÒµÃ½ºÏ¡¢Éç»á×ÊÔ´Á¬½áµÈ¡£</p>
-<p>ÄÏÍ¶ÎÀÉú¾Ö±íÊ¾£¬ÃñÖÚÈçÓÐÐèÇó£¬¿É²¦´òÍ¨±¨µç»°049-2224464£¬»ò24Ð¡Ê±°²ÐÄ×¨Ïß1925¡¢ÉúÃüÏß1995¡¢ÕÅÀÏÊ¦1980£¬ÓÉ×¨ÈËÌá¹©·þÎñ¡£</p>
-<p>ÎÀÉú¾Ö³¤»ÆÕÑÀÉÆÚÅÎ£¬½åÓÉ»ý¼«Ðûµ¼ÐÄÀí½¡¿µÏà¹ØÖªÄÜ£¬Äý¾ÛÉçÇøÁÚÀï»ú¹Ø»òÃñÖÚ¶ÔÐÄÀí½¡¿µµÄ¹²Ê¶£¬½¨Á¢ÔÚµØ»¯»ï°é¹ØÏµ£¬´ïµ½³õ¼¶Ô¤·ÀÐÔ»òÏà¹Ø²¹Öú·½°¸½éÈë£¬ÌáÉýÏØÃñÕûÌåÐÒ¸£¸Ð£¬´ïµ½Éç»áºÍÐ³µÄÄ¿±ê¡£</p>
-<p>ÔðÈÎ±à¼­£ºÓ¢ìõ</p>
+<p>ã€å¤§çºªå…ƒ2019å¹´08æœˆ15æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…æž—èŒéªžå°æ¹¾å—æŠ•æŠ¥å¯¼ï¼‰107å¹´åº¦<ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E8%87%AA%E6%9D%80%E9%98%B2%E6%B2%BB.md#1">è‡ªæ€é˜²æ²»</a>æˆæ•ˆåŠå¿ƒç†ã€å£è…”å¥åº·ä¸šåŠ¡è€ƒè¯„ï¼Œå—æŠ•åŽ¿è¡¨çŽ°ä¼˜å¼‚ï¼Œåˆ†åˆ«èŽ·å¾—ç»©ä¼˜å¥–å’Œä¼˜ç­‰å¥–ï¼Œåœ¨å…¨å›½å«ç¤¾æ”¿é¦–é•¿è”ç³»ä¼šè®®ä¸­ï¼Œç”±å«ç”Ÿç¦åˆ©éƒ¨é•¿é™ˆæ—¶ä¸­äº²è‡ªé¢å‘ä¼˜ç­‰åŽ¿å¸‚å¥–åº§ã€‚</p>
+<p>éšç€ç¤¾ä¼šä¸Žç”Ÿæ´»åž‹æ€çš„å¿«é€Ÿè½¬å˜ï¼Œæ°‘ä¼—é¢å¯¹å„ç§åŽ‹åŠ›ï¼Œè¿›è€Œå¯¼è‡´å„ç§ç²¾ç¥žéšœç¢é€å¹´æ”€å‡ï¼Œè½»è€…é€ æˆç„¦è™‘ã€çŸ­æœŸç¤¾ä¼šé€‚åº”éšœç¢ï¼Œé‡è€…åˆ™äº§ç”Ÿå¿§éƒï¼Œç”šè‡³å¼•å‘è‡ªæ€è¡Œä¸ºã€‚</p>
+<figure id="attachment_11454960" style="width: 600px" class="wp-caption alignnone"><ahref="https://i.epochtimes.com/assets/uploads/2019/08/8ed25423885b1930bb722d71bbb081ab.jpg"><img class="wp-image-11454960 size-large" src="https://i.epochtimes.com/assets/uploads/2019/08/8ed25423885b1930bb722d71bbb081ab-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">107å¹´åº¦<ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E8%87%AA%E6%9D%80%E9%98%B2%E6%B2%BB.md#1">è‡ªæ€é˜²æ²»</a>æˆæ•ˆåŠå¿ƒç†ã€å£è…”å¥åº·ä¸šåŠ¡è€ƒè¯„ï¼Œå—æŠ•åŽ¿è¡¨çŽ°ä¼˜å¼‚ï¼Œå«ç”Ÿå±€é•¿é»„æ˜­éƒŽï¼ˆå³ï¼‰æŽ¥å—å«ç”Ÿç¦åˆ©éƒ¨é•¿é™ˆæ—¶ä¸­ï¼ˆå·¦ï¼‰é¢å‘ä¼˜ç­‰åŽ¿å¸‚å¥–åº§ã€‚ï¼ˆå—æŠ•åŽ¿æ”¿åºœæä¾›ï¼‰</figcaption></figure>
+<p>å—æŠ•åŽ¿æ”¿åºœä¸ºå¼ºåŒ–æ°‘ä¼—<ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E5%BF%83%E7%90%86%E5%8D%AB%E7%94%9F.md#1">å¿ƒç†å«ç”Ÿ</a>æœåŠ¡ï¼ŒäºŽ13ä¹¡é•‡å¸‚å«ç”Ÿæ‰€è®¾ç½®å¿ƒç†<ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E5%92%A8%E5%95%86.md#1">å’¨å•†</a>æœåŠ¡ç«™ï¼Œæä¾›æ°‘ä¼—å¯è¿‘æ€§ã€ç¤¾åŒºæ€§æœåŠ¡ï¼Œå¸Œæœ›é€è¿‡å¿ƒç†å’¨å•†æœåŠ¡ï¼Œé™ªä¼´é™·å…¥ä½Žæ½®æ°‘ä¼—åº¦è¿‡äººç”Ÿå…³å¡ï¼Œæä¾›æ°‘ä¼—å¿ƒç†æ”¯æŒã€å’¨è¯¢æœåŠ¡çª—å£åŠæœåŠ¡æ®ç‚¹ã€‚</p>
+<p>å¦å¤–ï¼ŒåŽ¿å†…ç¤¾åŒº<ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E5%BF%83%E7%90%86%E5%8D%AB%E7%94%9F.md#1">å¿ƒç†å«ç”Ÿ</a>ä¸­å¿ƒæä¾›è‡ªæ€é«˜å±é™©ç¾¤ä¸ªæ¡ˆå…³æ€€è®¿è§†ï¼ŒæŽ¥èŽ·è‡ªæ€é«˜å±é™©ç¾¤ä¸ªæ¡ˆé€šæŠ¥ï¼Œå³æ´¾å‘˜æä¾›å…³æ€€ï¼Œè§†ä¸ªæ¡ˆçŠ¶å†µååŠ©è½¬ä»‹ç›¸å…³èµ„æºï¼ŒåŒ…å«å¿ƒç†<ahref="https://github.com/eyk232/djy/blob/master/gb/tag/%E5%92%A8%E5%95%86.md#1">å’¨å•†</a>ã€å°±ä¸šåª’åˆã€ç¤¾ä¼šèµ„æºè¿žç»“ç­‰ã€‚</p>
+<p>å—æŠ•å«ç”Ÿå±€è¡¨ç¤ºï¼Œæ°‘ä¼—å¦‚æœ‰éœ€æ±‚ï¼Œå¯æ‹¨æ‰“é€šæŠ¥ç”µè¯049-2224464ï¼Œæˆ–24å°æ—¶å®‰å¿ƒä¸“çº¿1925ã€ç”Ÿå‘½çº¿1995ã€å¼ è€å¸ˆ1980ï¼Œç”±ä¸“äººæä¾›æœåŠ¡ã€‚</p>
+<p>å«ç”Ÿå±€é•¿é»„æ˜­éƒŽæœŸç›¼ï¼Œè—‰ç”±ç§¯æžå®£å¯¼å¿ƒç†å¥åº·ç›¸å…³çŸ¥èƒ½ï¼Œå‡èšç¤¾åŒºé‚»é‡Œæœºå…³æˆ–æ°‘ä¼—å¯¹å¿ƒç†å¥åº·çš„å…±è¯†ï¼Œå»ºç«‹åœ¨åœ°åŒ–ä¼™ä¼´å…³ç³»ï¼Œè¾¾åˆ°åˆçº§é¢„é˜²æ€§æˆ–ç›¸å…³è¡¥åŠ©æ–¹æ¡ˆä»‹å…¥ï¼Œæå‡åŽ¿æ°‘æ•´ä½“å¹¸ç¦æ„Ÿï¼Œè¾¾åˆ°ç¤¾ä¼šå’Œè°çš„ç›®æ ‡ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šè‹±ç¥¯</p>
+
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/8/15/n11454958.htm">Ç¿»¯ÐÄÀíÎÀÉú·þÎñ ÄÏÍ¶×ÔÉ±·ÀÖÎ»ñ¼¨ÓÅ½±</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/6/21/n11338178.htm">Ô¼ÊøÍøÂ·×ÔÃ½Ìå  Ì¨¡¶×ÔÉ±·ÀÖÎ·¨¡·ÉÏÂ·</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/13/n11255081.htm">Ì¨±±ÊÐÎÀÉúÍÆÐÄÀí×ÉÉÌ ÕÒ»ØÊÐÃñÐÄÄÜÁ¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/8/n11242317.htm">ÖñÈÙÓÐ°® ¡°¾«Éñ²¡ÈËÉçÇøÈÚºÏ²©ÀÀ»á¡±Õ¹»îÁ¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/3/n11230811.htm">Ãâ·ÑÐÄÀí×ÉÑ¯  Òýµ¼ÓëÅã°é¶È¹ýÀ§¾³</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/11/28/n10879201.htm">Í¬ÐÄÐ­Á¦·À×ÔÉ± »ùÂ¡×ÔÉ±·ÀÖÎ¼û³ÉÐ§</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/9/6/n10694793.htm">¡°Íø×¡ÉúÃü£¬È±Äã²»¿É¡± ÏìÓ¦ÊÀ½ç×ÔÉ±·ÀÖÎÈÕ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/5/16/n9148334.htm">ÀÏÈË×ÔÉ±¸ßÓÚÇà×³Äê ³¤ÕÕ°²ÑøÐë×ÉÉÌÐÄÀí</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/8/14/n11451571.htm">¡¾·­Ç½±Ø¿´¡¿´¨ÆÕÌß±¬ÖÐ¹²ÕýÏòÏã¸Ûµ÷¾ü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/14/n11452918.htm">ÃÀÍË³ö·Éµ¯ÌõÔ¼ ·ÖÎö£ºÖÐ¹²ÎäÍ³ÄÑ¶È´óÔö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/14/n11453495.htm">ÖÐ¹²´óËÁÐû´«¸¶¹úºÀ ±ÜÌ¸Á½Ãû¡°ÉîÛÚ¹«°²¡±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/15/n11453937.htm">´¨ÆÕÌáÒéºÍÏ°½üÆ½»áÃæ ÈËµÀ½â¾öÏã¸ÛÎÊÌâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/5/n11432842.htm">¡¾ÏÍºó´«¡¿·¼Äê±ÀÊÅ ÈÃ¿µÎõÉîÇéÃå»³µÄÅ®ÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/6/4/n7964805.htm">¡¾ÎÄÊ·¡¿ÓÀÀÖ´óµÛ¿ª½®ÍØÍÁ ÄÒÀ¨¿âÒ³µº(ÉÏ)</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/7/n11437984.htm">²»Ì°ÃÀÉ«·´³ö×Ê¼ÞÅ®ÆÍ ÌÆÈË»ýÒõµÂÑÓÊÙ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/26/n11411971.htm">ÐÞÐÄÐÞ¿Ú ×Ô»áÔ¶ÀëÔÖ»ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/13/n11451171.htm">´¨ÆÕ£ºÖÐ¹²ÕýÏòÏã¸Ûµ÷¶¯¾ü¶Ó ´ó¼Ò¶¼ÒªÀä¾²</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/13/n11451148.htm">Ïã¸ÛÅ®×ÓÑÛ¾¦ÖÐµ¯ÕæÏà ¸ü¶àÏ¸½ÚÆØ¹â</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/13/n11451052.htm">¡¾ÐÂÎÅ¿´µã¡¿Ïã¸ÛÎ£¾Ö ±±¾©ÎÞÄÜ½âÀ§³öÐ°ÕÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/13/n11450684.htm">¡¾ÊÀ½çÊ®×ÖÂ·¿Ú¡¿Á½°¶ÊÖÒ¡Òû·ç±© ½âÎöÄ»ºóÒòËØ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/14/n11453359.htm">¡¾ÐÂÎÅ¿´µã¡¿´¨ÆÕ±¬¹²¾ü¼¯½á Ïã¸ÛÎ£»úÈçºÎ½â</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/13/n11451052.htm">¡¾ÐÂÎÅ¿´µã¡¿Ïã¸ÛÎ£¾Ö ±±¾©ÎÞÄÜ½âÀ§³öÐ°ÕÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/12/n11448975.htm">¾¯·½ÇÇ×°ºÚÒÂÈË¾Ð²¶Ê¾ÍþÕß Å·½õÌÄµÈÖÚÐÇÇ´Ôð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/13/n11451146.htm">ÁÖÖ£¼ÇÕß»áÓï´ø¿ÞÇ» ¶ÅãëÔó¸ãÐ¦Ö§ÕÐÈçºÎ´ßÀá</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/14/n11453118.htm">Å­³âÌØÊ×ÁÖÖ£ ¸èÊÖ¹ØÊçâùÉúÈÕ¸ÐÑÔ»ñ¿äÔÞ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/13/n11450156.htm">Ïô¾´ÌÚ¿ª³¬ÅÜ³ö³µ»ö ÄÚ¾Î·¢ÎÄÔÙÏò¶Ô·½ÖÂÇ¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/12/n11448528.htm">È¡ÏûµçÌ¨ÓéÀÖ½ÚÄ¿ É­ÃÀÓëÌýÖÚ»¥¶¯¿½ÎÊ¸Û¸®</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/17/5/16/n9148334.md#1">è€äººè‡ªæ€é«˜äºŽé’å£®å¹´ é•¿ç…§å®‰å…»é¡»å’¨å•†å¿ƒç†</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/18/9/6/n10694793.md#1">â€œç½‘ä½ç”Ÿå‘½ï¼Œç¼ºä½ ä¸å¯â€ å“åº”ä¸–ç•Œè‡ªæ€é˜²æ²»æ—¥</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/18/11/28/n10879201.md#1">åŒå¿ƒååŠ›é˜²è‡ªæ€ åŸºéš†è‡ªæ€é˜²æ²»è§æˆæ•ˆ</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/19/5/3/n11230811.md#1">å…è´¹å¿ƒç†å’¨è¯¢  å¼•å¯¼ä¸Žé™ªä¼´åº¦è¿‡å›°å¢ƒ</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/19/5/8/n11242317.md#1">ç«¹è£æœ‰çˆ± â€œç²¾ç¥žç—…äººç¤¾åŒºèžåˆåšè§ˆä¼šâ€å±•æ´»åŠ›</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/19/5/13/n11255081.md#1">å°åŒ—å¸‚å«ç”ŸæŽ¨å¿ƒç†å’¨å•† æ‰¾å›žå¸‚æ°‘å¿ƒèƒ½é‡</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/19/6/21/n11338178.md#1">çº¦æŸç½‘è·¯è‡ªåª’ä½“  å°ã€Šè‡ªæ€é˜²æ²»æ³•ã€‹ä¸Šè·¯</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081322.md#1">â€œä¸‰ä¿å®˜â€ç»“ç›Ÿ   å½°åŒ–åŽ¿æ°‘ä¼—æƒç›Šæ»´æ°´ä¸æ¼</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079280.md#1">æ‰“é€ æ— æš´å®¶å›­ å½°åŽ¿ä¸¾åŠžå„¿å°‘æ³•å¾‹å®£å¯¼å¯“æ•™äºŽä¹</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/1/n12075680.md#1">å›½ä¸­ç”Ÿå¸®å®¶è®¡é­æ„å¤–æ–­æŒ‡ æž—æ˜Žæº±æ…°é—®å‹‰åŠ±</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/liczai2340/djy/blob/master/gb/19/8/15/n11454958.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/liczai2340/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/liczai2340/fq/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/7/n11029582.md#1" target="_blank">èŸæ¥ ï¼šå¿«è·‘ï¼ç¥–å›½æ¥äº†ï¼</a></li><li><a href="https://github.com/eyk232/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977742.md#1" target="_blank">ä¼Šæœ—å§‘å¨˜å˜‰æ‰Žå°”?å¡”ç“¦çº³è‰¾(2) åŽ†ç»ƒçš„æ—…ç¨‹</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080214.md#1">è“¬ä½©å¥¥ï¼šå¤§é‡è¯æ®å°†ç—…æ¯’å’Œæ­¦æ±‰å®žéªŒå®¤ç›¸è”</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12077776.md#1">é­å¤®è§†è¿žéª‚ä¸‰å¤© è“¬ä½©å¥¥ååœ¨ä¸­å›½äººæ°”é£™å‡</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079946.md#1">ä¸­å…±å››åˆ†é’Ÿæ­Œæ›²æ¿€æ€’äºšæ´²æ°‘ä¼— 20ä¸‡äººè¸©</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080130.md#1">é­å¤®è§†è°©éª‚çš„ç¬¬äºŒä¸ªç¾Žå›½äºº ç­å†œè¯´äº†å•¥ï¼Ÿ</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12078752.md#1">è°ƒæŸ¥ä¸–å«å’Œä¸­å…±å…³ç³» å·æ™®æ‰‹æ¡ä¸€å¼ çŽ‹ç‰Œ</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081675.md#1">åˆ˜çœŸç¦»ä¸–44å¤© è¾›é¾™æ·±å¤œå‘æ–‡æ‚¼äº¡å¦»</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12078172.md#1">èŒƒå†°å†°è¢«å µç»è´¢è·¯ï¼Ÿä¼ é­å¹¿ç”µæ€»å±€ç¦ç›´æ’­å–è´§</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/1/n12075345.md#1">æµæµªçŒ«å¦ˆå¦ˆå¸¦å°çŒ«ä¸ŠåŒ»é™¢èŽ·å¾—å¸®åŠ© ç½‘å‹èµžçˆ†</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080335.md#1">å­™ä¿ªå‘æ–‡ä¸ºå¥³å„¿åº†ç”Ÿ 6å²å°èŠ±åˆè¢«äº²åˆ°è„¸å˜å½¢</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079058.md#1">è”¡é˜¿å˜ŽäºŒå®æ»¡æœˆ å–œæ”¶è”¡æ€»ç»Ÿæš–å¿ƒè´ºç¤¼</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/1/n12076297.md#1">å®ˆæˆè´¤ä¸»å®‹ä»å®— é©¾å´©åŽè¿žæ•Œå›½ä¹Ÿä¸¾å›½å“€ç—›</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/24/n12059149.md#1">æ˜Ÿå­›ä¸Žäººäº‹é¥ç›¸å‘¼åº” å¹¶éžæµªå¾—è™šå</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/12/n12024956.md#1">ã€é¦¨é¦™é›…å¥ã€‘è¯—è¯ä¸­çš„å¥³å­©å</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/4/30/n12071494.md#1">é£˜æ´‹è¿‡æµ· ç§»æ°‘è‰°è¾›è·¯â”€â”€æˆ‘å®¶æ—çš„æ•…äº‹ï¼ˆä¸€ï¼‰</a></li>
+<li><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/26/n11977935.md#1">ã€å“è¯»å®‹è¯ã€‘è¯ä¸­å¸çŽ‹ é£Žæµåƒå¤</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/eyk232/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/eyk232/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/8/15/n11454958.htm">å¼ºåŒ–å¿ƒç†å«ç”ŸæœåŠ¡ å—æŠ•è‡ªæ€é˜²æ²»èŽ·ç»©ä¼˜å¥–</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/eyk232/djy/blob/master/gb/19/8/15/n11454958.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/eyk232/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/eyk232/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/eyk232/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/eyk232/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eyk232/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
